# alfred-pwd-gen

./: README.md  build.sh  generator.py  info.plist  main.py  pyproject.toml  requirements.txt
src/: generator.py  main.py
workflow/: background.py  notify.py  update.py  util.py  workflow.py
