[tool.poetry]
name = "Password Generator"
version = "1.6.0"
description = "Generate secure passwords"
documentation = "https://github.com/fedecalendino/alfred-pwd-gen/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-pwd-gen"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
alfred-pyflow = "latest"

[tool.poetry.dev-dependencies]
black = "latest"
pyinstaller = "latest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
